# OpenGL-Basketball

./: CMakeLists.txt  readme.md
proj/: CMakeLists.txt  main.cpp
proj/animations/: ball.anm
proj/shaders/: TextureFragmentShader.fragmentshader
proj/textures/: ball.dds  banco.dds  campo.dds  cesto_suporte.dds  cesto_wall.dds  concrete.dds  hoop.dds  painel.dds  seats_back.dds
